<resources>
    <string name="app_name">Echo</string>
    <string name="intro_skip">გამოტოვება</string>
    <string name="intro_next">შემდეგი</string>
    <string name="intro_start">დაიწყე</string>
    <string name="onboarding_purpose_title">პროექტის მიზანია</string>
    <string name="onboarding_first_desc_text">ქუთაისის მრავალფეროვნების ისტორიის შესწავლა და პოპულარიზაცია ტოლერანტული გარემოს გასაძლიერებლად</string>
    <string name="onboarding_second_title_text">აღმოაჩინე</string>
    <string name="onboarding_second_desc_text">საფეხმავლო ტურის საშუალებით ქუთაისელი კათოლიკეებისა და ქუთაისელი ებრალების კვალი</string>
    <string name="onboarding_third_title_text">მხარდამჭერი</string>
    <string name="onboarding_third_desc_text">პროექტი დაფინანსებულია ფონდი „ღია საზოგადოება - საქართველოსა“ და კონრად
 ადენაუერის ფონდის პროგრამა „სამხრეთ კავკასიის პოლიტიკური დიალოგის“  მიერ.
    </string>
    <string name="register_title">რეგისტრაცია</string>
    <string name="register_description_text">შეავსე შენს შესახებ მარტივი კითხვარი. ქვიზის პასუხებსა და სერტიფიკატს გამოგიგზავნით მითითებულ ელ. ფოსტაზე</string>
    <string name="name_input">სახელი</string>
    <string name="last_name_input">გვარი</string>
    <string name="phone_input">ტელეფონი</string>
    <string name="email_input">ელ-ფოსტა</string>
    <string name="school_input">სკოლა</string>
    <string name="grade_input">კლასი</string>
    <string name="common_error">დაფიქსირდა შეცდომა</string>
    <string name="common_no_connection">ინტერნეტთან კავშირის პრობლემა</string>
    <string name="common_OK">კარგი</string>
    <string name="common_unknown_error">დაფიქსირდა უცნობი შეცდომა</string>
    <string name="continue_text">გაგრძელება</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_error">ელ-ფოსტის ფორმატი არასწორია</string>
    <string name="know_your_history_title">გაეცანი შენს ისტორიას</string>
    <string name="tour_chooser_description">ქუთაისის დოკუმენტური ისტორია იწყება თუმცა ანტიკური ავტორები მას თვლიან</string>
    <string name="tour_chooser_catholic_tour">კათოლიკური ტური</string>
    <string name="tour_chooser_hebrew_tour">ებრაული ტური</string>
    <string name="tour_chooser_start">ტურის დაწყება</string>
    <string name="bottom_sheet_catholic_description">თქვენ უახლოესი 1.5 საათის განმავლობაში აღმოაჩენთ ქუთაისელი კათოლიკეების წარსულს, გაიგებთ თუ რა როლი მიუძღვით მათ ქალაქის კულტურის, ეკონომიკისა და სოციალურ განვითარებაში.</string>
    <string name="bottom_sheet_hebrew_description">თქვენ უახლოესი 1.5 საათის განმავლობაში აღმოაჩენთ ქუთაისელი ებრაელების წარსულს, გაიგებთ თუ რა როლი მიუძღვით მათ ქალაქის კულტურის, ეკონომიკისა და სოციალურ განვითარებაში.</string>
    <string name="action_settings">აპლიკაციის პარამეტრები</string>
    <string name="additional_listener_msg">Additional listener message</string>
    <string name="granted_permissions">ლოკაციაზე წვდომა გააქტიურებულია</string>
    <string name="permanently_denied_permissions">შეზღუდული წვდომები: %s</string>
    <string name="permissions_required">გთხოვთ, გაააქტიურეთ წვდომა</string>
    <string name="rationale_permissions">წვდომა: %s</string>
    <string name="request_again">წვდომის მოთხოვნა</string>
    <string name="dialog_cancel">დახურვა</string>
    <string name="quiz_choose_answer">მონიშნე პასუხი</string>
    <string name="first_location_title">პირველი პუნქტი</string>
    <string name="distance_left_text">ადგილზე მისასვლელად დარჩენილია</string>
    <string name="start_ready_text">ადგილზე ვარ</string>
</resources>