<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:paddingBottom="@dimen/spacing_24">

    <TextView
        style="@style/FontPrimary"
        android:textSize="@dimen/font_medium"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tour_chooser_catholic_tour" />

    <ImageView
        android:id="@+id/dismiss_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_24"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/secondary_tr_60"
        app:layout_constraintEnd_toEndOf="@id/dismiss_button"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/tour_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        tools:src="@drawable/ic_catholic" />

    <TextView
        style="@style/FontSecondary"
        android:id="@+id/tour_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_32"
        android:layout_marginEnd="24dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tour_icon"
        tools:text="@string/bottom_sheet_catholic_description" />

    <ImageView
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_marginEnd="@dimen/spacing_24"
        android:background="@drawable/next_btn_bg"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tour_description" />

    <TextView
        android:id="@+id/start_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tour_chooser_start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/start_button"
        app:layout_constraintEnd_toEndOf="@id/start_button"
        app:layout_constraintStart_toStartOf="@id/start_button"
        app:layout_constraintTop_toTopOf="@id/start_button" />

    <ImageView
        android:id="@+id/start_button_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_12"
        android:background="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/start_button_text"
        app:layout_constraintStart_toEndOf="@id/start_button_text"
        app:layout_constraintTop_toTopOf="@id/start_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>