<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOnPrimary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/page_title"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_24"
            android:text="@string/know_your_history_title"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/page_description"
            style="@style/TextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_marginEnd="@dimen/spacing_24"
            android:lines="2"
            android:text="@string/tour_chooser_description"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/page_title" />

        <ImageView
            android:id="@+id/catholic_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_32"
            android:src="@drawable/ic_catholic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/page_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/catholic_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="@dimen/spacing_24"
            android:background="@drawable/tour_chooser_bg_catholic"
            android:paddingBottom="@dimen/spacing_24"
            app:layout_constraintTop_toBottomOf="@id/page_description">

            <TextView
                android:id="@+id/catholic_tour_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_weight="1"
                android:text="@string/tour_chooser_catholic_tour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/catholic_tour_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12"
                android:text="@string/know_your_history_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/catholic_tour_text" />

            <TextView
                android:id="@+id/catholic_tour_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12"
                android:text="@string/tour_chooser_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/catholic_tour_description" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_12"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="@id/catholic_tour_start"
                app:layout_constraintStart_toEndOf="@+id/catholic_tour_start"
                app:layout_constraintTop_toTopOf="@id/catholic_tour_start"
                app:tint="@color/primary_solid_10" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/hebrew_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_hebrew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/catholic_container" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hebrew_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_24"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="@dimen/spacing_24"
            android:background="@drawable/tour_chooser_bg_hebrew"
            android:paddingBottom="@dimen/spacing_24"
            app:layout_constraintTop_toBottomOf="@id/catholic_container">

            <TextView
                android:id="@+id/hebrew_tour_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_weight="1"
                android:text="@string/tour_chooser_hebrew_tour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hebrew_tour_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12"
                android:text="@string/know_your_history_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hebrew_tour_text" />

            <TextView
                android:id="@+id/hebrew_tour_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12"
                android:text="@string/tour_chooser_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hebrew_tour_description" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_12"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="@id/hebrew_tour_start"
                app:layout_constraintStart_toEndOf="@+id/hebrew_tour_start"
                app:layout_constraintTop_toTopOf="@id/hebrew_tour_start"
                app:tint="@color/secondary_solid_10" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>